{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 33,
  "lineage": "c932097a-7340-93f7-81fa-d0fa80484f7d",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "app_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.246.186.124",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-12-21T00:26:13.305-08:00",
            "id": "projects/project-kot-001/regions/europe-west3/addresses/reddit-app-ip",
            "name": "reddit-app-ip",
            "network_tier": "PREMIUM",
            "project": "project-kot-001",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-kot-001/regions/europe-west3/addresses/reddit-app-ip"
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_puma",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9292"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-12-21T00:26:13.066-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-kot-001/global/firewalls/allow-puma-default",
            "log_config": [],
            "name": "allow-puma-default",
            "network": "https://www.googleapis.com/compute/v1/projects/project-kot-001/global/networks/default",
            "priority": 1000,
            "project": "project-kot-001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-kot-001/global/firewalls/allow-puma-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "reddit-app"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/project-kot-001/global/images/reddit-app-base-1607424957",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-kot-001/zones/europe-west3-a/disks/reddit-app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-kot-001/zones/europe-west3-a/instances/reddit-app",
            "instance_id": "6736829366141838045",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "appuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDNhf3jxF0jsW7+vxrMjYL7XgMLr/QXxzqp8SmOeCh5Wgj6IGjI0OtKmOkf7UfimZNs2TutVF3F88FbbNzJw9zmEfGXG/lltIl3gnfBhqkDXrGc55jp2sdPQf2qS9o7/v2Nfb8i1lzy7FcQ20Ym9t3hMrOdkhL2Cb9gyQDPR2nQUy2ep7viLLApKeeWlvjUZqy/IyZJ/PBfAqPv/x9W+yFzK6GocAz2KKyKoLS7EtF2ILZ5Orts94Xep9wyTJN8b1QgcvTfIRxutqiN5Gew7pXlLsRSNJhshDHKgdRMEkkny7dqz68tPlot5Gqp2bbnwSRw6jOZ1gr1sr0uievMNPxR appuser\n"
            },
            "metadata_fingerprint": "wnnE0gc8pwE=",
            "name": "reddit-app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.246.186.124",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-kot-001/global/networks/default",
                "network_ip": "10.156.0.35",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-kot-001/regions/europe-west3/subnetworks/default",
                "subnetwork_project": "project-kot-001"
              }
            ],
            "project": "project-kot-001",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-kot-001/zones/europe-west3-a/instances/reddit-app",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "reddit-app"
            ],
            "tags_fingerprint": "M-ggixIz-AU=",
            "zone": "europe-west3-a"
          },
          "dependencies": [
            "module.app.google_compute_address.app_ip"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_mongo",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-12-21T00:26:13.063-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-kot-001/global/firewalls/allow-mongo-default",
            "log_config": [],
            "name": "allow-mongo-default",
            "network": "https://www.googleapis.com/compute/v1/projects/project-kot-001/global/networks/default",
            "priority": 1000,
            "project": "project-kot-001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-kot-001/global/firewalls/allow-mongo-default",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "reddit-app"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "reddit-db"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/project-kot-001/global/images/reddit-db-base-1607423663",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-kot-001/zones/europe-west3-a/disks/reddit-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-kot-001/zones/europe-west3-a/instances/reddit-db",
            "instance_id": "6390702749235667657",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "appuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDNhf3jxF0jsW7+vxrMjYL7XgMLr/QXxzqp8SmOeCh5Wgj6IGjI0OtKmOkf7UfimZNs2TutVF3F88FbbNzJw9zmEfGXG/lltIl3gnfBhqkDXrGc55jp2sdPQf2qS9o7/v2Nfb8i1lzy7FcQ20Ym9t3hMrOdkhL2Cb9gyQDPR2nQUy2ep7viLLApKeeWlvjUZqy/IyZJ/PBfAqPv/x9W+yFzK6GocAz2KKyKoLS7EtF2ILZ5Orts94Xep9wyTJN8b1QgcvTfIRxutqiN5Gew7pXlLsRSNJhshDHKgdRMEkkny7dqz68tPlot5Gqp2bbnwSRw6jOZ1gr1sr0uievMNPxR appuser\n"
            },
            "metadata_fingerprint": "wnnE0gc8pwE=",
            "name": "reddit-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.107.84.47",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-kot-001/global/networks/default",
                "network_ip": "10.156.0.34",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-kot-001/regions/europe-west3/subnetworks/default",
                "subnetwork_project": "project-kot-001"
              }
            ],
            "project": "project-kot-001",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-kot-001/zones/europe-west3-a/instances/reddit-db",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "reddit-db"
            ],
            "tags_fingerprint": "NQyRUqL7UTU=",
            "zone": "europe-west3-a"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-12-21T00:26:13.050-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-kot-001/global/firewalls/default-allow-ssh",
            "log_config": [],
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/project-kot-001/global/networks/default",
            "priority": 1000,
            "project": "project-kot-001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-kot-001/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          }
        }
      ]
    }
  ]
}